[gd_scene load_steps=9 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://Asset/font/kenvector_future.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Asset/Background/wp3522994.jpg" type="Texture" id=3]
[ext_resource path="res://tmblpopup.tres" type="StyleBox" id=4]

[sub_resource type="DynamicFont" id=5]
size = 90
outline_size = 10
outline_color = Color( 0.192157, 0.188235, 0.188235, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -36.0
margin_top = -204.0
margin_right = 988.0
margin_bottom = 396.0
rect_scale = Vector2( 0.352003, 0.330611 )
script = ExtResource( 1 )

[node name="Wp3522994" type="Sprite" parent="."]
position = Vector2( 556.813, 257.1 )
scale = Vector2( 0.473481, 0.672156 )
texture = ExtResource( 3 )

[node name="VBoxContainer1" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -407.0
margin_top = -32.0
margin_right = 523.0
margin_bottom = 207.0
rect_pivot_offset = Vector2( 1236, 234 )

[node name="Label" type="Label" parent="VBoxContainer1"]
margin_right = 930.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 5 )
text = "Continue ?"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.4133
margin_top = -6.60382
margin_right = 105.587
margin_bottom = 47.3962
rect_scale = Vector2( 1.25262, 1.50754 )
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_top = 2.0
margin_right = 146.0
margin_bottom = 25.0
focus_neighbour_top = NodePath("../QuitButton")
theme = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
text = "Yes"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 146.0
margin_bottom = 52.0
focus_neighbour_bottom = NodePath("../StartButton")
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
text = "No"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
